[project]
name = "pylembic"
version = "0.5.0"
description = "This package provides validation for Alembic migrations."
readme = "README.md"
authors = [
    { name = "Marco Espinosa", email = "marco@marcoespinosa.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "alembic==1.16.4",
    "matplotlib==3.10.3",
    "networkx==3.5",
    "typer==0.16.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "pytest==8.4.1",
    "ruff==0.12.4",
    "pre-commit==4.2.0",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W"]

[project.scripts]
pylembic = "pylembic.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
